
Release 5.1.2 (Unreleased)
==========================

Bug fixes
---------

- Fix deadlock in mesh extrusion when some ranks have no boundary faces.

Release 5.1.1 (December 20 2017)
================================

Bug fixes
---------

- GUI: fix crash in fluid structure interaction page in builds using PyQt5.

- Fix interlock in Syrthes coupling when combining surface and volume coupling.

- Fix in Rij EBRSM time stepping (coupled solver).

- Fix for mesh extrusion with varying number of layers.

- "separate_meshes" writer option should not propagate to EnSight
  mesh groups output.

- Fix issue #246 (crash in cs_selector_get_cells_boundary / getceb).

- Fix absorption coef. computation in FSCK model.

- Fix computation of pressure gradient in lagrangian equations for some cases:
  * retrieve 2/3*rho*k from P if an EVM turbulence model is enabled
  * retrieve rho0*g from grad(P) even if iphydr=1.

- Fix in post-processing of wrong user boundary conditions.

- Fix test in CDO Darcy flux computation.

- Fix bug in the implicitation of the Coriolis source terms
  (turbomachinery module).

- Fix tensorial left diffusion of vector (used by tensorial porosity iporos=2).

- Fix tags conditions and postpro (disable non available runs) in smgr.

- Salome_CFD: fix launch for user builds where CS_ROOT_DIR is not defined.

- Fix link with user functions for movable builds linking directly with
  Catalyst (e.g. Salome_CFD).

- Fix weights handling in radiative Gaussian quadrature.

- GUI: fix handling of exchange coefficient boundary conditions.

- Fix automatic installer crash due to malformed string format.

- Fix generation of Doxygen documentation.

Release 5.1.0 (October 10 2017)
===============================

Numerics
--------

- Atmospheric model: added partial radiative transfer properties model.

- Make supersonic outlet boundary condition implicit (compressible module).

- Added fallback mechanism to allow less stable but faster Krylov solvers